--- a/src/prozess_3.html
+++ b/src/prozess_3.html
@@ -122,7 +122,7 @@
             <div class="text_container">
                 <div class="text hide" id="text_0">
                     <p class="margin_0">   
-                        »Das ist nicht nötig, Herr K., Sie sind zu rücksichtsvoll, das Fräulein weiß ja von gar nichts, sie war seit dem frühen Morgen noch nicht zu Hause, es ist auch schon alles in Ordnung gebracht, sehen Sie selbst.« Und sie öffnete die Tür zu Fräulein Bürstners Zimmer. »Danke, ich glaube es«, sagte K., ging dann aber doch zu der offenen Tür. Der Mond schien still in das dunkle Zimmer. Soviel man sehen konnte, war wirklich alles an seinem Platz, auch die Bluse hing nicht mehr an der Fensterklinke. Auffallend hoch schienen die Polster im Bett, sie lagen zum Teil im Mondlicht.  //  »Das Fräulein kommt oft spätnach Hause«, sagte K. und sah Frau Grubach an, als trage sie die Verantwortung dafür. »Wie eben junge Leute sind!« sagte Frau Grubach entschuldigend. »Gewiß, gewiß«, sagte K., »es kann aber zu weit gehen.« »Das kann es«, sagte Frau Grubach, »wie sehr haben Sie recht, Herr K. Vielleicht sogar in diesem Fall. Ich will Fräulein Bürstner gewiß nicht verleumden, sie ist ein gutes, liebes Mädchen, freundlich, ordentlich, pünktlich, arbeitsam, ich schätze das alles sehr, aber eines ist wahr, sie sollte stolzer, zurückhaltender sein. Ich habe sie in diesem Monat schon zweimal in entlegenen Straßen und immer mit einem andern Herrn gesehen. 
+                        Ob sie mir die Hand reichen wird? Der Aufseher hat mir die Hand nicht gereicht, dachte er und sah die Frau anders als früher, prüfend an. Sie stand auf, weil auch er aufgestanden war, sie war ein wenig befangen, weil ihr nicht alles, was K. gesagt hatte, verständlich gewesen war. Infolge dieser Befangenheit sagte sie aber etwas, was sie gar nicht wollte und was auch gar nicht am Platze war:»Nehmen Sie es doch nicht so schwer, Herr K.«, sagte sie, hatte Tränen in der Stimme und vergaß natürlich auch den Handschlag. »Ich wüßte nicht, daß ich es schwer nehme«, sagte K., plötzlich ermüdet und das Wertlose aller Zustimmungen dieser Frau einsehend. // Bei der Tür fragte er noch: »Ist Fräulein Bürstner zu Hause?« »Nein«, sagte Frau Grubach und lächelte bei dieser trockenen Auskunft mit einer verspäteten vernünftigen Teilnahme. »Sie ist im Theater. Wollten Sie etwas von ihr? Soll ich ihr etwas ausrichten?« »Ach, ich wollte nur ein paar Worte mit ihr reden.« »Ich weiß leider nicht, wann sie kommt; wenn sie im Theater ist, kommt sie gewöhnlich spät.« »Das ist ja ganz gleichgültig«,sagte K. und drehte schon den gesenkten Kopf der Tür zu, um wegzugehen, »ich wollte mich nur bei ihr entschuldigen, daß ich heute ihr Zimmer in Anspruch genommen habe.« 
                     </p>
                 </div>
                 <div class="text hide" id="text_1">
@@ -144,7 +144,6 @@
                         Dreht gesenkten Kopf, gesenkten Kopf, gesenkten Kopf
                         Entschuldigen, entschuldigen, entschuldigen 
                         Zimmer, Anspruch, Anspruch, Anspruch
-                        
                     </p>
                 </div>
             </div>
