--- a/src/prozess_4.html
+++ b/src/prozess_4.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Der Prozeß -3</title>
+  <title>Der Prozeß -4</title>
   <meta name="author" content="david">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
@@ -93,8 +93,8 @@
                 <a href="../index.html" class="state"></a>
                 <a href="prozess_1.html" class="state"></a>
                 <a href="prozess_2.html" class="state"></a>
+                <a href="prozess_3.html" class="state"></a>
                 <a href="#" class="state active"></a>
-                <a href="prozess_4.html" class="state"></a>
                 <a href="prozess_5.html" class="state"></a>
                 <a href="prozess_6.html" class="state"></a>
                 <a href="prozess_7.html" class="state"></a>
@@ -110,40 +110,37 @@
             <div class="mov_container border" id="mov_container">
                 <div class="mov hide" id="mov_0">
                     <video-js id="video_0">
-                        <source src="../media/mov/2.1.mp4" type="video/mp4">
+                        <source src="../media/mov/2.2.mp4" type="video/mp4">
                     </video-js>
                 </div>
                 <div class="mov hide" id="mov_1">
                     <video-js id="video_1">
-                        <source src="../media/mov/2.1_abstrakt.mp4" type="video/mp4">
+                        <source src="../media/mov/2.2_abstrakt.mp4" type="video/mp4">
                     </video-js>
                 </div>
             </div>
             <div class="text_container">
                 <div class="text hide" id="text_0">
-                    <p class="margin_0">   
-                        Ob sie mir die Hand reichen wird? Der Aufseher hat mir die Hand nicht gereicht, dachte er und sah die Frau anders als früher, prüfend an. Sie stand auf, weil auch er aufgestanden war, sie war ein wenig befangen, weil ihr nicht alles, was K. gesagt hatte, verständlich gewesen war. Infolge dieser Befangenheit sagte sie aber etwas, was sie gar nicht wollte und was auch gar nicht am Platze war:»Nehmen Sie es doch nicht so schwer, Herr K.«, sagte sie, hatte Tränen in der Stimme und vergaß natürlich auch den Handschlag. »Ich wüßte nicht, daß ich es schwer nehme«, sagte K., plötzlich ermüdet und das Wertlose aller Zustimmungen dieser Frau einsehend. // Bei der Tür fragte er noch: »Ist Fräulein Bürstner zu Hause?« »Nein«, sagte Frau Grubach und lächelte bei dieser trockenen Auskunft mit einer verspäteten vernünftigen Teilnahme. »Sie ist im Theater. Wollten Sie etwas von ihr? Soll ich ihr etwas ausrichten?« »Ach, ich wollte nur ein paar Worte mit ihr reden.« »Ich weiß leider nicht, wann sie kommt; wenn sie im Theater ist, kommt sie gewöhnlich spät.« »Das ist ja ganz gleichgültig«,sagte K. und drehte schon den gesenkten Kopf der Tür zu, um wegzugehen, »ich wollte mich nur bei ihr entschuldigen, daß ich heute ihr Zimmer in Anspruch genommen habe.« 
+                    <p class="margin_0">
+                        »Das ist nicht nötig, Herr K., Sie sind zu rücksichtsvoll, das Fräulein weiß ja von gar nichts, sie war seit dem frühen Morgen noch nicht zu Hause, es ist auch schon alles in Ordnung gebracht, sehen Sie selbst.« Und sie öffnete die Tür zu Fräulein Bürstners Zimmer. »Danke, ich glaube es«, sagte K., ging dann aber doch zu der offenen Tür. Der Mond schien still in das dunkle Zimmer. Soviel man sehen konnte, war wirklich alles an seinem Platz, auch die Bluse hing nicht mehr an der Fensterklinke. Auffallend hoch schienen die Polster im Bett, sie lagen zum Teil im Mondlicht.  //  »Das Fräulein kommt oft spätnach Hause«, sagte K. und sah Frau Grubach an, als trage sie die Verantwortung dafür. »Wie eben junge Leute sind!« sagte Frau Grubach entschuldigend. »Gewiß, gewiß«, sagte K., »es kann aber zu weit gehen.« »Das kann es«, sagte Frau Grubach, »wie sehr haben Sie recht, Herr K. Vielleicht sogar in diesem Fall. Ich will Fräulein Bürstner gewiß nicht verleumden, sie ist ein gutes, liebes Mädchen, freundlich, ordentlich, pünktlich, arbeitsam, ich schätze das alles sehr, aber eines ist wahr, sie sollte stolzer, zurückhaltender sein. Ich habe sie in diesem Monat schon zweimal in entlegenen Straßen und immer mit einem andern Herrn gesehen. 
                     </p>
                 </div>
                 <div class="text hide" id="text_1">
                     <p class="margin_0">
-                        Hand reichen? Hand reichen? Hand reichen?
-                        Sehen, sehen, sehen1
-                        Frau, Frau, Frau!
-                        Prüfend, prüfend, prüfend!
-                        Aufstehen, aufstehen, aufstehen!
-                        Sie befangen, befangen, befangen!
-                        Nicht alles verständlich, verständlich, verständlich!
-                        Nicht schwer nehmen, nehmen, nehmen!
-                        Kein Handschlag, kein Handschlag, kein Handschlag!
-                        Nicht schwer nehmen, schwer nehmen, schwer nehmen!
-                        Ermüdet, ermüdet, ermüdet!
-                        Fräulein zu Hause? Fräulein zu Hause? Fräulein zu Hause? 
-                        Theater, Theater, Theater!
-                        Spät, spät, spät!
-                        Dreht gesenkten Kopf, gesenkten Kopf, gesenkten Kopf!
-                        Entschuldigen, entschuldigen, entschuldigen!
-                        Zimmer, Anspruch, Anspruch, Anspruch!
+                        Nicht nötig, nicht nötig, nicht nötig!
+                        Frühen Morgen, nicht zu Hause, nicht zu Hause, nicht zu Hause!
+                        Ordnung gebracht, Ordnung gebracht, Ordnung gebracht!
+                        Fräulein Zimmer, Fräulein Zimmer, Fräulein Zimmer!
+                        Schaut, schaut, schaut!
+                        Alles an seinem Platz, Platz, Platz!
+                        Mondlicht, Mondlicht, Mondlicht!
+                        Fragt, fragt, fragt!
+                        Fräulein spät nach Hause, spät nach Hause, spät nach Hause!
+                        Junge Leute! Junge Leute! Junge Leute!
+                        Zustimmend, zustimmend, zustimmend!
+                        Gutes, liebes, freundliches, ordentliches, pünktliches, arbeitsames!
+                        Braucht mehr Stolz, zurückhaltender, zurückhaltender, zurückhaltender! 
+                        Immer, andern Herrn, andern Herrn, andern Herrn!  
                     </p>
                 </div>
             </div>
@@ -152,6 +149,6 @@
     </div>
     <script src="../script/howler.min.js"></script>
     <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>
-    <script src="../script/process_3.js"></script>
+    <script src="../script/process_4.js"></script>
 </body>
 </html>
