--- a/src/prozess_5.html
+++ b/src/prozess_5.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Der Prozeß -3</title>
+  <title>Der Prozeß -5</title>
   <meta name="author" content="david">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
@@ -93,9 +93,9 @@
                 <a href="../index.html" class="state"></a>
                 <a href="prozess_1.html" class="state"></a>
                 <a href="prozess_2.html" class="state"></a>
-                <a href="#" class="state active"></a>
+                <a href="prozess_3.html" class="state"></a>
                 <a href="prozess_4.html" class="state"></a>
-                <a href="prozess_5.html" class="state"></a>
+                <a href="#" class="state active"></a>
                 <a href="prozess_6.html" class="state"></a>
                 <a href="prozess_7.html" class="state"></a>
             </div>
@@ -110,40 +110,38 @@
             <div class="mov_container border" id="mov_container">
                 <div class="mov hide" id="mov_0">
                     <video-js id="video_0">
-                        <source src="../media/mov/2.1.mp4" type="video/mp4">
+                        <source src="../media/mov/3.1.mp4" type="video/mp4">
                     </video-js>
                 </div>
                 <div class="mov hide" id="mov_1">
                     <video-js id="video_1">
-                        <source src="../media/mov/2.1_abstrakt.mp4" type="video/mp4">
+                        <source src="../media/mov/3.1_abstrakt.mp4" type="video/mp4">
                     </video-js>
                 </div>
             </div>
             <div class="text_container">
                 <div class="text hide" id="text_0">
-                    <p class="margin_0">   
-                        Ob sie mir die Hand reichen wird? Der Aufseher hat mir die Hand nicht gereicht, dachte er und sah die Frau anders als früher, prüfend an. Sie stand auf, weil auch er aufgestanden war, sie war ein wenig befangen, weil ihr nicht alles, was K. gesagt hatte, verständlich gewesen war. Infolge dieser Befangenheit sagte sie aber etwas, was sie gar nicht wollte und was auch gar nicht am Platze war:»Nehmen Sie es doch nicht so schwer, Herr K.«, sagte sie, hatte Tränen in der Stimme und vergaß natürlich auch den Handschlag. »Ich wüßte nicht, daß ich es schwer nehme«, sagte K., plötzlich ermüdet und das Wertlose aller Zustimmungen dieser Frau einsehend. // Bei der Tür fragte er noch: »Ist Fräulein Bürstner zu Hause?« »Nein«, sagte Frau Grubach und lächelte bei dieser trockenen Auskunft mit einer verspäteten vernünftigen Teilnahme. »Sie ist im Theater. Wollten Sie etwas von ihr? Soll ich ihr etwas ausrichten?« »Ach, ich wollte nur ein paar Worte mit ihr reden.« »Ich weiß leider nicht, wann sie kommt; wenn sie im Theater ist, kommt sie gewöhnlich spät.« »Das ist ja ganz gleichgültig«,sagte K. und drehte schon den gesenkten Kopf der Tür zu, um wegzugehen, »ich wollte mich nur bei ihr entschuldigen, daß ich heute ihr Zimmer in Anspruch genommen habe.« 
+                    <p class="margin_0">
+                        Sonntag war trübes Wetter. K. war sehr ermüdet, da er wegen einer Stammtischfeierlichkeit bis spät in die Nacht im Gasthaus geblieben war, er hätte fast verschlafen. Eilig, ohne Zeit zu haben, zu überlegen und die verschiedenen Pläne, die er während der Woche ausgedacht hatte, zusammenzustellen, kleidete er sich an und lief, ohne zu frühstücken, in die ihm bezeichnete Vorstadt. Eigentümlicherweise traf er, obwohl er wenig Zeit hatte, umherzublicken, die drei an seiner Angelegenheit beteiligten Beamten, Rabensteiner, Kullich und Kaminer. Die ersten zwei fuhren in einer Elektrischen quer über K.s Weg, Kaminer aber saß auf der Terrasse eines Kaffeehauses und beugte sich gerade, als K. vorüberkam, neugierig über die Brüstung. Alle sahen ihm wohl nach und wunderten sich, wie ihr Vorgesetzter lief; es war irgendein Trotz, der K. davon abgehalten hatte, zu fahren, er hatte Abscheu vor jeder, selbst der geringsten fremden Hilfe in dieser seiner Sache, auch wollte er niemanden in Anspruch nehmen und dadurch selbst nur im allerentferntesten einweihen; schließlich hatte er aber auch nicht die geringste Lust, sich durch allzugroße Pünktlichkeit vor der Untersuchungskommission zu erniedrigen. 
                     </p>
                 </div>
                 <div class="text hide" id="text_1">
                     <p class="margin_0">
-                        Hand reichen? Hand reichen? Hand reichen?
-                        Sehen, sehen, sehen!
-                        Frau, Frau, Frau!
-                        Prüfend, prüfend, prüfend!
-                        Aufstehen, aufstehen, aufstehen!
-                        Sie befangen, befangen, befangen!
-                        Nicht alles verständlich, verständlich, verständlich!
-                        Nicht schwer nehmen, nehmen, nehmen!
-                        Kein Handschlag, kein Handschlag, kein Handschlag!
-                        Nicht schwer nehmen, schwer nehmen, schwer nehmen!
-                        Ermüdet, ermüdet, ermüdet!
-                        Fräulein zu Hause? Fräulein zu Hause? Fräulein zu Hause? 
-                        Theater, Theater, Theater!
-                        Spät, spät, spät!
-                        Dreht gesenkten Kopf, gesenkten Kopf, gesenkten Kopf!
-                        Entschuldigen, entschuldigen, entschuldigen!
-                        Zimmer, Anspruch, Anspruch, Anspruch!
+                        Trübes Wetter, trübes Wetter, trübes Wetter!
+                        Sehr ermüdet, sehr ermüdet, sehr ermüdet!
+                        Stammtischfeierlichkeit, Stammtischfeierlichkeit, Stammtischfeierlichkeit!
+                        Fast verschlafen, verschlafen, verschlafen!
+                        Eilig, ohne Zeit, ohne Zeit, ohne Zeit!
+                        Kleidet, kleidet, kleidet!
+                        Ohne Frühstück, ohne Frühstück, ohne Frühstück!
+                        Trift drei Beamte, drei Beamte, drei Beamte!
+                        Zwei, Elektrische, Elektrische, Elektrische!
+                        Terrasse, Kaffeehaus, Kaffeehaus, Kaffeehaus!
+                        Sehen nach, sehen nach, sehen nach!
+                        Wunderten, wunderten wunderten!
+                        Trotz, Trotz, Trotz!
+                        Abgehalten, fahren, fahren, fahren!
+                        Abscheu, Hilfe, Hilfe, Hilfe!
                     </p>
                 </div>
             </div>
@@ -152,6 +150,6 @@
     </div>
     <script src="../script/howler.min.js"></script>
     <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>
-    <script src="../script/process_3.js"></script>
+    <script src="../script/process_5.js"></script>
 </body>
 </html>
