--- a/src/prozess_2.2.html
+++ b/src/prozess_2.2.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Der Prozeß -4</title>
+  <title>Der Prozeß - 2.2</title>
   <meta name="author" content="david">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
@@ -91,13 +91,13 @@
         <main class="media">
             <div class="state_container">
                 <a href="../index.html" class="state"></a>
-                <a href="prozess_1.html" class="state"></a>
-                <a href="prozess_2.html" class="state"></a>
-                <a href="prozess_3.html" class="state"></a>
+                <a href="prozess_1.2.html" class="state"></a>
+                <a href="prozess_1.3.html" class="state"></a>
+                <a href="prozess_2.1.html" class="state"></a>
                 <a href="#" class="state active"></a>
-                <a href="prozess_5.html" class="state"></a>
-                <a href="prozess_6.html" class="state"></a>
-                <a href="prozess_7.html" class="state"></a>
+                <a href="prozess_3.1.html" class="state"></a>
+                <a href="prozess_3.2.html" class="state"></a>
+                <a href="prozess_3.3.html" class="state"></a>
             </div>
             <div class="audio_container hide" id="audio_container">
                 <div class="audio hide" id="audio_0">
