--- a/src/prozess_3.1.html
+++ b/src/prozess_3.1.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Der Prozeß -2</title>
+  <title>Der Prozeß - 3.1</title>
   <meta name="author" content="david">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
@@ -91,13 +91,13 @@
         <main class="media">
             <div class="state_container">
                 <a href="../index.html" class="state"></a>
-                <a href="prozess_1.html" class="state"></a>
+                <a href="prozess_1.2.html" class="state"></a>
+                <a href="prozess_1.3.html" class="state"></a>
+                <a href="prozess_2.1.html" class="state"></a>
+                <a href="prozess_2.2.html" class="state"></a>
                 <a href="#" class="state active"></a>
-                <a href="prozess_3.html" class="state"></a>
-                <a href="prozess_4.html" class="state"></a>
-                <a href="prozess_5.html" class="state"></a>
-                <a href="prozess_6.html" class="state"></a>
-                <a href="prozess_7.html" class="state"></a>
+                <a href="prozess_3.2.html" class="state"></a>
+                <a href="prozess_3.3.html" class="state"></a>
             </div>
             <div class="audio_container hide" id="audio_container">
                 <div class="audio hide" id="audio_0">
@@ -110,37 +110,38 @@
             <div class="mov_container border" id="mov_container">
                 <div class="mov hide" id="mov_0">
                     <video-js id="video_0">
-                        <source src="../media/mov/1.3.mp4" type="video/mp4">
+                        <source src="../media/mov/3.1.mp4" type="video/mp4">
                     </video-js>
                 </div>
                 <div class="mov hide" id="mov_1">
                     <video-js id="video_1">
-                        <source src="../media/mov/1.3_abstrakt.mp4" type="video/mp4">
+                        <source src="../media/mov/3.1_abstrakt.mp4" type="video/mp4">
                     </video-js>
                 </div>
             </div>
             <div class="text_container">
                 <div class="text hide" id="text_0">
-                    <p class="margin_0">   
-                        »Wer sind Sie?« fragte K. sofort und brachte sein Gesicht nahe an den Burschen, man sah nicht viel im Halbdunkel des Flurs. »Ich bin der Sohn des Hausmeisters, gnädiger Herr«, antwortete der Bursche, nahm die Pfeife aus dem Mund und trat zur Seite. »Der Sohn des Hausmeisters?« fragte K. und klopfte mit seinem Stock ungeduldig den Boden. »Wünscht der gnädige Herr etwas? Soll ich den Vater holen?« »Nein, nein«, sagte K., in seiner Stimme lag etwas Verzeihendes, als habe der Bursche etwas Böses ausgeführt, er aber verzeihe ihm. »Es ist gut«, sagte er dann und ging weiter, aber ehe er die Treppe hinaufstieg, drehte er sich noch einmal um. //  Er hätte geradewegs in sein Zimmer gehen können, aber da er mit Frau Grubach sprechen wollte, klopfte er gleich an ihre Tür an. Sie saß mit einem Strickstrumpf am Tisch, auf dem noch ein Haufen alter Strümpfe lag. K. entschuldigte sich zerstreut, daß er so spät komme, aber Frau Grubach war sehr freundlich und wollte keine Entschuldigung hören, für ihn sei sie immer zu sprechen, er wisse sehr gut, daß er ihr bester und liebster Mieter sei. K. sah sich im Zimmer um, es war wieder vollkommen in seinem alten Zustand,
+                    <p class="margin_0">
+                        Sonntag war trübes Wetter. K. war sehr ermüdet, da er wegen einer Stammtischfeierlichkeit bis spät in die Nacht im Gasthaus geblieben war, er hätte fast verschlafen. Eilig, ohne Zeit zu haben, zu überlegen und die verschiedenen Pläne, die er während der Woche ausgedacht hatte, zusammenzustellen, kleidete er sich an und lief, ohne zu frühstücken, in die ihm bezeichnete Vorstadt. Eigentümlicherweise traf er, obwohl er wenig Zeit hatte, umherzublicken, die drei an seiner Angelegenheit beteiligten Beamten, Rabensteiner, Kullich und Kaminer. Die ersten zwei fuhren in einer Elektrischen quer über K.s Weg, Kaminer aber saß auf der Terrasse eines Kaffeehauses und beugte sich gerade, als K. vorüberkam, neugierig über die Brüstung. Alle sahen ihm wohl nach und wunderten sich, wie ihr Vorgesetzter lief; es war irgendein Trotz, der K. davon abgehalten hatte, zu fahren, er hatte Abscheu vor jeder, selbst der geringsten fremden Hilfe in dieser seiner Sache, auch wollte er niemanden in Anspruch nehmen und dadurch selbst nur im allerentferntesten einweihen; schließlich hatte er aber auch nicht die geringste Lust, sich durch allzugroße Pünktlichkeit vor der Untersuchungskommission zu erniedrigen. 
                     </p>
                 </div>
                 <div class="text hide" id="text_1">
                     <p class="margin_0">
-                        Wer, Bursche, Bursche, Bursche!
-                        Sohn, Hausmeister, Hausmeister, Hausmeister!
-                        Vater holen? Vater holen? Vater holen? 
-                        Es ist gut, es ist gut, es ist gut! 
-                        Gehen, gehen, gehen! 
-                        Stopp, stopp, stopp! 
-                        Klopf, klopf, klopf! 
-                        Frau Grubach, Grubach, Grubach! 
-                        Strickstrumpf, Strickstrumpf, Strickstrumpf! 
-                        Tisch, Tisch, Tisch! 
-                        Entschuldigen, entschuldigen, entschuldigen! 
-                        Freundlich, freundlich, freundlich! 
-                        Bester Mieter, liebster Mieter, beser Mieter! 
-                        Zimmer, alter Zustand,  Zimmer alt! 
+                        Trübes Wetter, trübes Wetter, trübes Wetter!
+                        Sehr ermüdet, sehr ermüdet, sehr ermüdet!
+                        Stammtischfeierlichkeit, Stammtischfeierlichkeit, Stammtischfeierlichkeit!
+                        Fast verschlafen, verschlafen, verschlafen!
+                        Eilig, ohne Zeit, ohne Zeit, ohne Zeit!
+                        Kleidet, kleidet, kleidet!
+                        Ohne Frühstück, ohne Frühstück, ohne Frühstück!
+                        Trift drei Beamte, drei Beamte, drei Beamte!
+                        Zwei, Elektrische, Elektrische, Elektrische!
+                        Terrasse, Kaffeehaus, Kaffeehaus, Kaffeehaus!
+                        Sehen nach, sehen nach, sehen nach!
+                        Wunderten, wunderten wunderten!
+                        Trotz, Trotz, Trotz!
+                        Abgehalten, fahren, fahren, fahren!
+                        Abscheu, Hilfe, Hilfe, Hilfe!
                     </p>
                 </div>
             </div>
@@ -149,6 +150,6 @@
     </div>
     <script src="../script/howler.min.js"></script>
     <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>
-    <script src="../script/process_2.js"></script>
+    <script src="../script/process_5.js"></script>
 </body>
 </html>
