--- a/src/prozess_3.2.html
+++ b/src/prozess_3.2.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Der Prozeß - 3.3</title>
+  <title>Der Prozeß - 3.2</title>
   <meta name="author" content="david">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
@@ -91,14 +91,13 @@
         <main class="media">
             <div class="state_container">
                 <a href="../index.html" class="state"></a>
-                <a href="prozess_1.html" class="state"></a>
-                <a href="prozess_2.html" class="state"></a>
-                <a href="prozess_3.html" class="state"></a>
-                <a href="prozess_4.html" class="state"></a>
-                <a href="prozess_5.html" class="state"></a>
-                <a href="prozess_6.html" class="state"></a>
+                <a href="prozess_1.2.html" class="state"></a>
+                <a href="prozess_1.3.html" class="state"></a>
+                <a href="prozess_2.1.html" class="state"></a>
+                <a href="prozess_2.2.html" class="state"></a>
+                <a href="prozess_3.1.html" class="state"></a>
                 <a href="#" class="state active"></a>
-
+                <a href="prozess_3.3.html" class="state"></a>
             </div>
             <div class="audio_container hide" id="audio_container">
                 <div class="audio hide" id="audio_0">
@@ -111,36 +110,39 @@
             <div class="mov_container border" id="mov_container">
                 <div class="mov hide" id="mov_0">
                     <video-js id="video_0">
-                        <source src="../media/mov/3.3.mp4" type="video/mp4">
+                        <source src="../media/mov/3.2.mp4" type="video/mp4">
                     </video-js>
                 </div>
                 <div class="mov hide" id="mov_1">
                     <video-js id="video_1">
-                        <source src="../media/mov/3.3_abstrakt.mp4" type="video/mp4">
+                        <source src="../media/mov/3.2_abstrakt.mp4" type="video/mp4">
                     </video-js>
                 </div>
             </div>
             <div class="text_container">
                 <div class="text hide" id="text_0">
                     <p class="margin_0">
-                        Man rief einander über die Gasse zu, ein solcher Zuruf bewirkte gerade über K.ein großes Gelächter. Regelmäßig verteilt befanden sich in der langen Straße kleine, unter dem Straßenniveau liegende, durch ein paar Treppen erreichbare Läden mit verschiedenen Lebensmitteln. Dort gingen Frauen aus und ein oder standen auf den Stufen und plauderten. Ein Obsthändler, der seine Waren zu den Fenstern hinauf empfahl, hätte, ebenso unaufmerksam wie K.,mit seinem Karren diesen fast niedergeworfen. Eben begann ein in besseren Stadtvierteln ausgedientes Grammophon mörderisch zu spielen.
+                        Allerdings lief er jetzt, um nur möglichst um neun Uhr einzutreffen, obwohl er nicht einmal für eine bestimmte Stunde bestellt war. Er hatte gedacht, das Haus schon von der Ferne an irgendeinem Zeichen, das er sich selbst nicht genau vorgestellt hatte, oder an einer besonderen Bewegung vor dem Eingang schon von weitem zu erkennen. Aber die Juliusstraße, in der es sein sollte und an deren Beginn K. einen Augenblick lang stehenblieb, enthielt auf beiden Seiten fast ganz einförmige Häuser, hohe, graue, von armen Leuten bewohnte Miethäuser. Jetzt, am Sonntagmorgen, waren die meisten Fenster besetzt, Männer in Hemdärmeln lehnten dort und rauchten oder hielten kleine Kinder vorsichtig und zärtlich an den Fensterrand. Andere Fenster waren hoch mit Bettzeug angefüllt, über dem flüchtig der zerraufte Kopf einer Frau erschien. 
                     </p>
                 </div>
                 <div class="text hide" id="text_1">
                     <p class="margin_0">
-                        Rufe, Rufe, Rufe!
-                        Gasse, Gasse, Gasse!
-                        Gelächter, Gelächter, Gelächter!
-                        Treppen, Treppen, Treppen!
-                        Läden, Läden, Läden!
-                        Frauen, ein, aus, ein, aus, ein, aus!
-                        Plaudern, plaudern, plaudern!
-                        Obsthändler, Obsthändler, Obsthändler!
-                        Unaufmerksam, Unaufmerksam, Unaufmerksam!
-                        Karren, Karren, Karren!
-                        Fast niedergeworfen, niedergeworfen, niedergeworfen!
-                        Grammophon, mörderisch, mörderisch, mörderisch!
-                        Spielen, spielen, spielen!
+                        Läuft, läuft, läuft!
+                        Neun Uhr, neun Uhr, neun Uhr!
+                        Gedacht, gedacht, gedacht!
+                        Haus ferne, Haus ferne, Haus ferne!
+                        Irgendein Zeichen, Zeichen, Zeichen!
+                        Erkennen, erkennen, erkennen!
+                        Straße, Straße, Straße!
+                        Häuser, Häuser, Häuser!
+                        Hohe, hohe, hohe!
+                        Graue, graue, graue!
+                        Arme Leute, arme Leute, arme Leute!
+                        Fenster besetzt, besetzt, besetzt!
+                        Männer, Hemdärmel, Hemdärmel, Hemdärmel!
+                        Rauchen, rauchen, rauchen!
+                        Bettbezug, Bettbezug, Bettbezug!
+                        Zerraufter Kopf, Kopf, Kopf!
                     </p>
                 </div>
             </div>
@@ -149,6 +151,6 @@
     </div>
     <script src="../script/howler.min.js"></script>
     <script src="https://vjs.zencdn.net/7.8.3/video.js"></script>
-    <script src="../script/process_7.js"></script>
+    <script src="../script/process_6.js"></script>
 </body>
 </html>
