--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="refresh" content="0; url=./public/index.html">
-    <title>Processing</title>
+	<title>Processing &lt;3</title>
 </head>
 <body>
     <!-- dummy for public/index.html-->
