--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p><a href="obskkura/">Obskkura</a></p>
-    <p><a href="Portfolio/">portfolio</a></p>
+    <p><a href="portfolio/">portfolio</a></p>
 </body>
 </html>
