Add processing showcase

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p><a href="obskkura/">Obskkura</a></p>
     <p><a href="portfolio/">Portfolio</a></p>
+    <p><a href="processing_showcase/public/index.html">Processing showcase</a></p>
 </body>
 </html>
