--- a/obskkura/content/sketchbook/examples.html
+++ b/obskkura/content/sketchbook/examples.html
@@ -54,7 +54,7 @@
         </a>
     </section>
     <section>
-        <p class="no-padding">nebelbank</p>
+        <p class="no-padding">Nebelbank</p>
         <a href="../nebelbank.html">
             <div class="image-container no-padding one">
                 <img src="../../assets/sketchbook/nb_1.png" />
