Activate portfolio link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p><a href="obskkura/">Obskkura</a></p>
-    <p><a href="portfolio/">Portfolio xxx</a></p>
+    <p><a href="portfolio/">Portfolio</a></p>
     <p><a href="processing_showcase/public/index.html">Processing Showcase</a></p>
 </body>
 </html>
